--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,9 @@
     "service_worker": "js/background.js",
     "type": "module"
   },
+  "action": {
+    "default_title": "simcheck"
+  },
   "minimum_chrome_version": "92",
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'"
