--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,9 @@
   "description": "a chrome extension to generate, compare and visualize vector embeddings",
   "version": "0.0.1",
   "permissions": [
-    "activeTab",
-    "scripting",
-    "contextMenus",
     "storage",
-    "unlimitedStorage"
+    "unlimitedStorage",
+    "alarms"
   ],
   "background": {
     "service_worker": "js/background.js",
