--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,13 @@
   "name": "simcheck",
   "description": "a chrome extension to generate, compare and visualize vector embeddings",
   "version": "0.0.1",
-  "permissions": ["storage", "unlimitedStorage", "alarms", "notifications"],
+  "permissions": [
+    "storage",
+    "unlimitedStorage",
+    "alarms",
+    "notifications",
+    "downloads"
+  ],
   "background": {
     "service_worker": "js/background.js",
     "type": "module"
